<resources>
    <string name="app_name">마이웨이</string>
    <string name="menu_alarm">알람 설정</string>
    <string name="menu_notification">알림 수신 설정</string>
    <string name="menu_settings">기타 설정</string>
    <string name="menu_button">menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_header_text">알람 활성화</string>
    <string name="alarm_disturb_text">알람 금지 시간대</string>
    <string name="notification_header_text">모든 앱으로부터 알림 받기</string>
    <string name="notification_discord_text">디스코드 알림 받기</string>
    <string name="notification_kakaotalk_text">카카오톡 알림 받기</string>
    <string name="btn_grant_permission_text">권한 허용하기</string>
    <string name="imageView_contentDescription">ImageView</string>
    <string name="tv_permission_description_notification">마이웨이 앱은 다른 앱의 알림을 읽어 동작하기 때문에 알림 액세스 권한이 필요합니다.</string>
    <string name="tv_permission_description_write_settings">마이웨이 앱이 알람을 켤 때 볼륨을 조절하기 위해 시스템 설정 수정 권한이 필요합니다.</string>
    <string name="btn_alarm_edit_confirm">확인</string>
</resources>