<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_alarm"
            android:title="@string/menu_alarm"
            android:icon="@drawable/ic_baseline_access_alarm_24"
            android:checkable="true"
            android:checked="true"/>

        <item
            android:id="@+id/menu_notification"
            android:title="@string/menu_notification"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:checkable="true"
            android:checked="false"/>

        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:checkable="true"
            android:checked="false"/>
    </group>
</menu>