<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionActivity"
    android:background="@color/lostark_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_permission_description"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/tv_permission_description_notification"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/lostark_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_grant_notification_example"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/imageView_contentDescription"
            app:layout_constraintBottom_toTopOf="@+id/btn_grant_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_permission_description"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btn_grant_permission"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_grant_permission_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/lostark_indigo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:insetBottom="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>